finished api documentation. added password change feature. Change MyAccount page to split the edit profil logic into different component, react is so goated for this and for conditionall rendering :o. I hardcoded the routes, i know we have swagger but didnt know how to intergrate it in the frontend app.
