# backend/swagger_output.json
@@ -228,6 +228,16 @@
           }
         }
       }
+    },
+    "/api/v1/doc/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "components": {
